exports[`no-useless-spread > invalid(1): Object.assign(target, {...source}) 1`] = `

  1 | Object.assign(target, {...source})

`;

exports[`no-useless-spread > invalid(1): Object.assign(target, {...source}) 2`] = `

Message:
> 1 | Object.assign(target, {...source})
    |                        ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, source)

`;

exports[`no-useless-spread > invalid(1): [...foo.concat(bar)] 1`] = `

  1 | [...foo.concat(bar)]

`;

exports[`no-useless-spread > invalid(1): [...foo.concat(bar)] 2`] = `

Message:
> 1 | [...foo.concat(bar)]
    | ^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.concat(bar)

`;

exports[`no-useless-spread > invalid(1): const array = [...[a]] 1`] = `

  1 | const array = [...[a]]

`;

exports[`no-useless-spread > invalid(1): const array = [...[a]] 2`] = `

Message:
> 1 | const array = [...[a]]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a]

`;

exports[`no-useless-spread > invalid(1): const map = new Map([...iterable]) 1`] = `

  1 | const map = new Map([...iterable])

`;

exports[`no-useless-spread > invalid(1): const map = new Map([...iterable]) 2`] = `

Message:
> 1 | const map = new Map([...iterable])
    |                     ^^^^^^^^^^^^^ \`new Map(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const map = new Map(iterable)

`;

exports[`no-useless-spread > invalid(1): new Set(...iterable) 1`] = `

  1 | new Set(...iterable)

`;

exports[`no-useless-spread > invalid(1): new Set(...iterable) 2`] = `

Message:
> 1 | new Set(...iterable)
    |         ^^^^^^^^^^^ \`new Set(…)\` accepts a single iterable argument, spreading is misleading.

`;

exports[`no-useless-spread > invalid(10): [...foo.split(\"|\")] 1`] = `

  1 | [...foo.split("|")]

`;

exports[`no-useless-spread > invalid(10): [...foo.split(\"|\")] 2`] = `

Message:
> 1 | [...foo.split("|")]
    | ^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.split("|")

`;

exports[`no-useless-spread > invalid(10): const object = {...{a,},} 1`] = `

  1 | const object = {...{a,},}

`;

exports[`no-useless-spread > invalid(10): const object = {...{a,},} 2`] = `

Message:
> 1 | const object = {...{a,},}
    |                 ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a,}

`;

exports[`no-useless-spread > invalid(10): const typed = BigUint64Array.from([...iterable]) 1`] = `

  1 | const typed = BigUint64Array.from([...iterable])

`;

exports[`no-useless-spread > invalid(10): const typed = BigUint64Array.from([...iterable]) 2`] = `

Message:
> 1 | const typed = BigUint64Array.from([...iterable])
    |                                   ^^^^^^^^^^^^^ \`BigUint64Array.from(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const typed = BigUint64Array.from(iterable)

`;

exports[`no-useless-spread > invalid(11): [...Object.keys(foo)] 1`] = `

  1 | [...Object.keys(foo)]

`;

exports[`no-useless-spread > invalid(11): [...Object.keys(foo)] 2`] = `

Message:
> 1 | [...Object.keys(foo)]
    | ^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | Object.keys(foo)

`;

exports[`no-useless-spread > invalid(11): const object = Object.fromEntries([...iterable]) 1`] = `

  1 | const object = Object.fromEntries([...iterable])

`;

exports[`no-useless-spread > invalid(11): const object = Object.fromEntries([...iterable]) 2`] = `

Message:
> 1 | const object = Object.fromEntries([...iterable])
    |                                   ^^^^^^^^^^^^^ \`Object.fromEntries(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const object = Object.fromEntries(iterable)

`;

exports[`no-useless-spread > invalid(11): foo(...[a,],) 1`] = `

  1 | foo(...[a,],)

`;

exports[`no-useless-spread > invalid(11): foo(...[a,],) 2`] = `

Message:
> 1 | foo(...[a,],)
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a,)

`;

exports[`no-useless-spread > invalid(12): [...Object.values(foo)] 1`] = `

  1 | [...Object.values(foo)]

`;

exports[`no-useless-spread > invalid(12): [...Object.values(foo)] 2`] = `

Message:
> 1 | [...Object.values(foo)]
    | ^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | Object.values(foo)

`;

exports[`no-useless-spread > invalid(12): for (const foo of [...iterable]); 1`] = `

  1 | for (const foo of [...iterable]);

`;

exports[`no-useless-spread > invalid(12): for (const foo of [...iterable]); 2`] = `

Message:
> 1 | for (const foo of [...iterable]);
    |                   ^^^^^^^^^^^^^ \`for…of\` can iterate over an iterable, it's unnecessary to convert to an array.

Output:
  1 | for (const foo of iterable);

`;

exports[`no-useless-spread > invalid(12): new Foo(...[a,],) 1`] = `

  1 | new Foo(...[a,],)

`;

exports[`no-useless-spread > invalid(12): new Foo(...[a,],) 2`] = `

Message:
> 1 | new Foo(...[a,],)
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a,)

`;

exports[`no-useless-spread > invalid(13): [...Array.from(foo)] 1`] = `

  1 | [...Array.from(foo)]

`;

exports[`no-useless-spread > invalid(13): [...Array.from(foo)] 2`] = `

Message:
> 1 | [...Array.from(foo)]
    | ^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | Array.from(foo)

`;

exports[`no-useless-spread > invalid(13): async () => {for await (const foo of [...iterable]);} 1`] = `

  1 | async () => {for await (const foo of [...iterable]);}

`;

exports[`no-useless-spread > invalid(13): async () => {for await (const foo of [...iterable]);} 2`] = `

Message:
> 1 | async () => {for await (const foo of [...iterable]);}
    |                                      ^^^^^^^^^^^^^ \`for…of\` can iterate over an iterable, it's unnecessary to convert to an array.

Output:
  1 | async () => {for await (const foo of iterable);}

`;

exports[`no-useless-spread > invalid(13): const array = [...(( [a] ))] 1`] = `

  1 | const array = [...(( [a] ))]

`;

exports[`no-useless-spread > invalid(13): const array = [...(( [a] ))] 2`] = `

Message:
> 1 | const array = [...(( [a] ))]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [ a ]

`;

exports[`no-useless-spread > invalid(14): [...Array.of()] 1`] = `

  1 | [...Array.of()]

`;

exports[`no-useless-spread > invalid(14): [...Array.of()] 2`] = `

Message:
> 1 | [...Array.of()]
    | ^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | Array.of()

`;

exports[`no-useless-spread > invalid(14): const map = new Map([...iterable,]) 1`] = `

  1 | const map = new Map([...iterable,])

`;

exports[`no-useless-spread > invalid(14): const map = new Map([...iterable,]) 2`] = `

Message:
> 1 | const map = new Map([...iterable,])
    |                     ^^^^^^^^^^^^^^ \`new Map(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const map = new Map(iterable)

`;

exports[`no-useless-spread > invalid(14): const object = {...(( {a} ))} 1`] = `

  1 | const object = {...(( {a} ))}

`;

exports[`no-useless-spread > invalid(14): const object = {...(( {a} ))} 2`] = `

Message:
> 1 | const object = {...(( {a} ))}
    |                 ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = { a }

`;

exports[`no-useless-spread > invalid(15): [...new Array(3)] 1`] = `

  1 | [...new Array(3)]

`;

exports[`no-useless-spread > invalid(15): [...new Array(3)] 2`] = `

Message:
> 1 | [...new Array(3)]
    | ^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

`;

exports[`no-useless-spread > invalid(15): foo(...(( [a] ))) 1`] = `

  1 | foo(...(( [a] )))

`;

exports[`no-useless-spread > invalid(15): foo(...(( [a] ))) 2`] = `

Message:
> 1 | foo(...(( [a] )))
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo( a )

`;

exports[`no-useless-spread > invalid(15): for (const foo of [...iterable,]); 1`] = `

  1 | for (const foo of [...iterable,]);

`;

exports[`no-useless-spread > invalid(15): for (const foo of [...iterable,]); 2`] = `

Message:
> 1 | for (const foo of [...iterable,]);
    |                   ^^^^^^^^^^^^^^ \`for…of\` can iterate over an iterable, it's unnecessary to convert to an array.

Output:
  1 | for (const foo of iterable);

`;

exports[`no-useless-spread > invalid(16): [...await Promise.all(foo)] 1`] = `

  1 | [...await Promise.all(foo)]

`;

exports[`no-useless-spread > invalid(16): [...await Promise.all(foo)] 2`] = `

Message:
> 1 | [...await Promise.all(foo)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | (await Promise.all(foo))

`;

exports[`no-useless-spread > invalid(16): const map = new Map([...iterable,],) 1`] = `

  1 | const map = new Map([...iterable,],)

`;

exports[`no-useless-spread > invalid(16): const map = new Map([...iterable,],) 2`] = `

Message:
> 1 | const map = new Map([...iterable,],)
    |                     ^^^^^^^^^^^^^^ \`new Map(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const map = new Map(iterable,)

`;

exports[`no-useless-spread > invalid(16): new Foo(...(( [a] ))) 1`] = `

  1 | new Foo(...(( [a] )))

`;

exports[`no-useless-spread > invalid(16): new Foo(...(( [a] ))) 2`] = `

Message:
> 1 | new Foo(...(( [a] )))
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo( a )

`;

exports[`no-useless-spread > invalid(17): [...await Promise.allSettled(foo)] 1`] = `

  1 | [...await Promise.allSettled(foo)]

`;

exports[`no-useless-spread > invalid(17): [...await Promise.allSettled(foo)] 2`] = `

Message:
> 1 | [...await Promise.allSettled(foo)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | (await Promise.allSettled(foo))

`;

exports[`no-useless-spread > invalid(17): const array = [...[]] 1`] = `

  1 | const array = [...[]]

`;

exports[`no-useless-spread > invalid(17): const array = [...[]] 2`] = `

Message:
> 1 | const array = [...[]]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = []

`;

exports[`no-useless-spread > invalid(17): const map = new Map([...(( iterable ))]) 1`] = `

  1 | const map = new Map([...(( iterable ))])

`;

exports[`no-useless-spread > invalid(17): const map = new Map([...(( iterable ))]) 2`] = `

Message:
> 1 | const map = new Map([...(( iterable ))])
    |                     ^^^^^^^^^^^^^^^^^^^ \`new Map(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const map = new Map((( iterable )))

`;

exports[`no-useless-spread > invalid(18): const object = {...{}} 1`] = `

  1 | const object = {...{}}

`;

exports[`no-useless-spread > invalid(18): const object = {...{}} 2`] = `

Message:
> 1 | const object = {...{}}
    |                 ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {}

`;

exports[`no-useless-spread > invalid(18): for (const foo of [...(( iterable ))]); 1`] = `

  1 | for (const foo of [...(( iterable ))]);

`;

exports[`no-useless-spread > invalid(18): for (const foo of [...(( iterable ))]); 2`] = `

Message:
> 1 | for (const foo of [...(( iterable ))]);
    |                   ^^^^^^^^^^^^^^^^^^^ \`for…of\` can iterate over an iterable, it's unnecessary to convert to an array.

Output:
  1 | for (const foo of (( iterable )));

`;

exports[`no-useless-spread > invalid(18): function foo(array: number[]) { return [...array.map(value => value * 2)]; } 1`] = `

Filename: file.ts

  1 | function foo(array: number[]) { return [...array.map(value => value * 2)]; }

`;

exports[`no-useless-spread > invalid(18): function foo(array: number[]) { return [...array.map(value => value * 2)]; } 2`] = `

Message:
> 1 | function foo(array: number[]) { return [...array.map(value => value * 2)]; }
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | function foo(array: number[]) { return array.map(value => value * 2); }

`;

exports[`no-useless-spread > invalid(19): const map = new Map((( [...(( iterable ))] ))) 1`] = `

  1 | const map = new Map((( [...(( iterable ))] )))

`;

exports[`no-useless-spread > invalid(19): const map = new Map((( [...(( iterable ))] ))) 2`] = `

Message:
> 1 | const map = new Map((( [...(( iterable ))] )))
    |                        ^^^^^^^^^^^^^^^^^^^ \`new Map(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const map = new Map((( (( iterable )) )))

`;

exports[`no-useless-spread > invalid(19): foo(...[]) 1`] = `

  1 | foo(...[])

`;

exports[`no-useless-spread > invalid(19): foo(...[]) 2`] = `

Message:
> 1 | foo(...[])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo()

`;

exports[`no-useless-spread > invalid(19): function foo(array: number[]) { return [...array.filter(Boolean)]; } 1`] = `

Filename: file.ts

  1 | function foo(array: number[]) { return [...array.filter(Boolean)]; }

`;

exports[`no-useless-spread > invalid(19): function foo(array: number[]) { return [...array.filter(Boolean)]; } 2`] = `

Message:
> 1 | function foo(array: number[]) { return [...array.filter(Boolean)]; }
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | function foo(array: number[]) { return array.filter(Boolean); }

`;

exports[`no-useless-spread > invalid(2): Object.assign(target, {...a}, {...b}) 1`] = `

  1 | Object.assign(target, {...a}, {...b})

`;

exports[`no-useless-spread > invalid(2): Object.assign(target, {...a}, {...b}) 2`] = `

Message:
> 1 | Object.assign(target, {...a}, {...b})
    |                        ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, a, {...b})

`;

exports[`no-useless-spread > invalid(2): Object.assign(target, {...a}, {...b}) 3`] = `

Message:
> 1 | Object.assign(target, {...a}, {...b})
    |                                ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, {...a}, b)

`;

exports[`no-useless-spread > invalid(2): [...foo.copyWithin(-2)] 1`] = `

  1 | [...foo.copyWithin(-2)]

`;

exports[`no-useless-spread > invalid(2): [...foo.copyWithin(-2)] 2`] = `

Message:
> 1 | [...foo.copyWithin(-2)]
    | ^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.copyWithin(-2)

`;

exports[`no-useless-spread > invalid(2): const object = {...{a}} 1`] = `

  1 | const object = {...{a}}

`;

exports[`no-useless-spread > invalid(2): const object = {...{a}} 2`] = `

Message:
> 1 | const object = {...{a}}
    |                 ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a}

`;

exports[`no-useless-spread > invalid(2): const weakMap = new WeakMap([...iterable]) 1`] = `

  1 | const weakMap = new WeakMap([...iterable])

`;

exports[`no-useless-spread > invalid(2): const weakMap = new WeakMap([...iterable]) 2`] = `

Message:
> 1 | const weakMap = new WeakMap([...iterable])
    |                             ^^^^^^^^^^^^^ \`new WeakMap(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const weakMap = new WeakMap(iterable)

`;

exports[`no-useless-spread > invalid(2): new Map(...iterable) 1`] = `

  1 | new Map(...iterable)

`;

exports[`no-useless-spread > invalid(2): new Map(...iterable) 2`] = `

Message:
> 1 | new Map(...iterable)
    |         ^^^^^^^^^^^ \`new Map(…)\` accepts a single iterable argument, spreading is misleading.

`;

exports[`no-useless-spread > invalid(20): for (const foo of (( [...(( iterable ))] ))); 1`] = `

  1 | for (const foo of (( [...(( iterable ))] )));

`;

exports[`no-useless-spread > invalid(20): for (const foo of (( [...(( iterable ))] ))); 2`] = `

Message:
> 1 | for (const foo of (( [...(( iterable ))] )));
    |                      ^^^^^^^^^^^^^^^^^^^ \`for…of\` can iterate over an iterable, it's unnecessary to convert to an array.

Output:
  1 | for (const foo of (( (( iterable )) )));

`;

exports[`no-useless-spread > invalid(20): function foo(array: number[]) { return [...array.flatMap(value => value)]; } 1`] = `

Filename: file.ts

  1 | function foo(array: number[]) { return [...array.flatMap(value => value)]; }

`;

exports[`no-useless-spread > invalid(20): function foo(array: number[]) { return [...array.flatMap(value => value)]; } 2`] = `

Message:
> 1 | function foo(array: number[]) { return [...array.flatMap(value => value)]; }
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | function foo(array: number[]) { return array.flatMap(value => value); }

`;

exports[`no-useless-spread > invalid(20): new Foo(...[]) 1`] = `

  1 | new Foo(...[])

`;

exports[`no-useless-spread > invalid(20): new Foo(...[]) 2`] = `

Message:
> 1 | new Foo(...[])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo()

`;

exports[`no-useless-spread > invalid(21): const array = [...[,]] 1`] = `

  1 | const array = [...[,]]

`;

exports[`no-useless-spread > invalid(21): const array = [...[,]] 2`] = `

Message:
> 1 | const array = [...[,]]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = []

`;

exports[`no-useless-spread > invalid(21): for (const foo of[...iterable]); 1`] = `

  1 | for (const foo of[...iterable]);

`;

exports[`no-useless-spread > invalid(21): for (const foo of[...iterable]); 2`] = `

Message:
> 1 | for (const foo of[...iterable]);
    |                  ^^^^^^^^^^^^^ \`for…of\` can iterate over an iterable, it's unnecessary to convert to an array.

Output:
  1 | for (const foo of iterable);

`;

exports[`no-useless-spread > invalid(21): function foo(bar) {\n\treturn[...Object.keys(bar)];\n} 1`] = `

  1 | function foo(bar) {
  2 | 	return[...Object.keys(bar)];
  3 | }

`;

exports[`no-useless-spread > invalid(21): function foo(bar) {\n\treturn[...Object.keys(bar)];\n} 2`] = `

Message:
  1 | function foo(bar) {
> 2 | 	return[...Object.keys(bar)];
    | 	      ^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.
  3 | }

Output:
  1 | function foo(bar) {
  2 | 	return Object.keys(bar);
  3 | }

`;

exports[`no-useless-spread > invalid(22): foo(...[,]) 1`] = `

  1 | foo(...[,])

`;

exports[`no-useless-spread > invalid(22): foo(...[,]) 2`] = `

Message:
> 1 | foo(...[,])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(undefined)

`;

exports[`no-useless-spread > invalid(22): function * fn() {\n\tyield * [...iterable];\n} 1`] = `

  1 | function * fn() {
  2 | 	yield * [...iterable];
  3 | }

`;

exports[`no-useless-spread > invalid(22): function * fn() {\n\tyield * [...iterable];\n} 2`] = `

Message:
  1 | function * fn() {
> 2 | 	yield * [...iterable];
    | 	        ^^^^^^^^^^^^^ \`yield*\` can delegate to an iterable, it's unnecessary to convert to an array.
  3 | }

Output:
  1 | function * fn() {
  2 | 	yield * iterable;
  3 | }

`;

exports[`no-useless-spread > invalid(22): function foo(bar) {\n\treturn[\n\t\t...Object.keys(bar)\n\t];\n} 1`] = `

  1 | function foo(bar) {
  2 | 	return[
  3 | 		...Object.keys(bar)
  4 | 	];
  5 | }

`;

exports[`no-useless-spread > invalid(22): function foo(bar) {\n\treturn[\n\t\t...Object.keys(bar)\n\t];\n} 2`] = `

Message:
  1 | function foo(bar) {
> 2 | 	return[
    | 	      ^
> 3 | 		...Object.keys(bar)
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | 	];
    | ^^ Unnecessarily cloning an array.
  5 | }

Output:
  1 | function foo(bar) {
  2 | 	return (
  3 | 		Object.keys(bar)
  4 | 	);
  5 | }

`;

exports[`no-useless-spread > invalid(23): function * fn() {\n\tyield * [...iterable,];\n} 1`] = `

  1 | function * fn() {
  2 | 	yield * [...iterable,];
  3 | }

`;

exports[`no-useless-spread > invalid(23): function * fn() {\n\tyield * [...iterable,];\n} 2`] = `

Message:
  1 | function * fn() {
> 2 | 	yield * [...iterable,];
    | 	        ^^^^^^^^^^^^^^ \`yield*\` can delegate to an iterable, it's unnecessary to convert to an array.
  3 | }

Output:
  1 | function * fn() {
  2 | 	yield * iterable;
  3 | }

`;

exports[`no-useless-spread > invalid(23): function foo(bar) {\n\treturn[\n\t\t...(\n\t\t\tObject.keys(bar)\n\t\t)\n\t];\n} 1`] = `

  1 | function foo(bar) {
  2 | 	return[
  3 | 		...(
  4 | 			Object.keys(bar)
  5 | 		)
  6 | 	];
  7 | }

`;

exports[`no-useless-spread > invalid(23): function foo(bar) {\n\treturn[\n\t\t...(\n\t\t\tObject.keys(bar)\n\t\t)\n\t];\n} 2`] = `

Message:
  1 | function foo(bar) {
> 2 | 	return[
    | 	      ^
> 3 | 		...(
    | ^^^^^^
> 4 | 			Object.keys(bar)
    | ^^^^^^^^^^^^^^^^^^^
> 5 | 		)
    | ^^^
> 6 | 	];
    | ^^ Unnecessarily cloning an array.
  7 | }

Output:
  1 | function foo(bar) {
  2 | 	return (
  3 | 		(
  4 | 			Object.keys(bar)
  5 | 		)
  6 | 	);
  7 | }

`;

exports[`no-useless-spread > invalid(23): new Foo(...[,]) 1`] = `

  1 | new Foo(...[,])

`;

exports[`no-useless-spread > invalid(23): new Foo(...[,]) 2`] = `

Message:
> 1 | new Foo(...[,])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(undefined)

`;

exports[`no-useless-spread > invalid(24): const array = [...[,,]] 1`] = `

  1 | const array = [...[,,]]

`;

exports[`no-useless-spread > invalid(24): const array = [...[,,]] 2`] = `

Message:
> 1 | const array = [...[,,]]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [,]

`;

exports[`no-useless-spread > invalid(24): function * fn() {\n\tyield * (( [...iterable] ));\n} 1`] = `

  1 | function * fn() {
  2 | 	yield * (( [...iterable] ));
  3 | }

`;

exports[`no-useless-spread > invalid(24): function * fn() {\n\tyield * (( [...iterable] ));\n} 2`] = `

Message:
  1 | function * fn() {
> 2 | 	yield * (( [...iterable] ));
    | 	           ^^^^^^^^^^^^^ \`yield*\` can delegate to an iterable, it's unnecessary to convert to an array.
  3 | }

Output:
  1 | function * fn() {
  2 | 	yield * (( iterable ));
  3 | }

`;

exports[`no-useless-spread > invalid(24): function foo(bar) {\n\treturn([\n\t\t...Object.keys(bar)\n\t]);\n} 1`] = `

  1 | function foo(bar) {
  2 | 	return([
  3 | 		...Object.keys(bar)
  4 | 	]);
  5 | }

`;

exports[`no-useless-spread > invalid(24): function foo(bar) {\n\treturn([\n\t\t...Object.keys(bar)\n\t]);\n} 2`] = `

Message:
  1 | function foo(bar) {
> 2 | 	return([
    | 	       ^
> 3 | 		...Object.keys(bar)
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | 	]);
    | ^^ Unnecessarily cloning an array.
  5 | }

Output:
  1 | function foo(bar) {
  2 | 	return (
  3 | 		Object.keys(bar)
  4 | 	);
  5 | }

`;

exports[`no-useless-spread > invalid(25): foo(...[,,]) 1`] = `

  1 | foo(...[,,])

`;

exports[`no-useless-spread > invalid(25): foo(...[,,]) 2`] = `

Message:
> 1 | foo(...[,,])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(undefined,undefined)

`;

exports[`no-useless-spread > invalid(25): function * fn() {\n\tyield * (( [...(( iterable ))] ));\n} 1`] = `

  1 | function * fn() {
  2 | 	yield * (( [...(( iterable ))] ));
  3 | }

`;

exports[`no-useless-spread > invalid(25): function * fn() {\n\tyield * (( [...(( iterable ))] ));\n} 2`] = `

Message:
  1 | function * fn() {
> 2 | 	yield * (( [...(( iterable ))] ));
    | 	           ^^^^^^^^^^^^^^^^^^^ \`yield*\` can delegate to an iterable, it's unnecessary to convert to an array.
  3 | }

Output:
  1 | function * fn() {
  2 | 	yield * (( (( iterable )) ));
  3 | }

`;

exports[`no-useless-spread > invalid(26): new Foo(...[,,]) 1`] = `

  1 | new Foo(...[,,])

`;

exports[`no-useless-spread > invalid(26): new Foo(...[,,]) 2`] = `

Message:
> 1 | new Foo(...[,,])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(undefined,undefined)

`;

exports[`no-useless-spread > invalid(27): const array = [...[a, , b,]] 1`] = `

  1 | const array = [...[a, , b,]]

`;

exports[`no-useless-spread > invalid(27): const array = [...[a, , b,]] 2`] = `

Message:
> 1 | const array = [...[a, , b,]]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a, , b]

`;

exports[`no-useless-spread > invalid(28): foo(...[a, , b,]) 1`] = `

  1 | foo(...[a, , b,])

`;

exports[`no-useless-spread > invalid(28): foo(...[a, , b,]) 2`] = `

Message:
> 1 | foo(...[a, , b,])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a, undefined, b)

`;

exports[`no-useless-spread > invalid(29): new Foo(...[a, , b,]) 1`] = `

  1 | new Foo(...[a, , b,])

`;

exports[`no-useless-spread > invalid(29): new Foo(...[a, , b,]) 2`] = `

Message:
> 1 | new Foo(...[a, , b,])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a, undefined, b)

`;

exports[`no-useless-spread > invalid(3): Object.assign(target, first, {...second}) 1`] = `

  1 | Object.assign(target, first, {...second})

`;

exports[`no-useless-spread > invalid(3): Object.assign(target, first, {...second}) 2`] = `

Message:
> 1 | Object.assign(target, first, {...second})
    |                               ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, first, second)

`;

exports[`no-useless-spread > invalid(3): [...foo.flat()] 1`] = `

  1 | [...foo.flat()]

`;

exports[`no-useless-spread > invalid(3): [...foo.flat()] 2`] = `

Message:
> 1 | [...foo.flat()]
    | ^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.flat()

`;

exports[`no-useless-spread > invalid(3): const set = new Set([...iterable]) 1`] = `

  1 | const set = new Set([...iterable])

`;

exports[`no-useless-spread > invalid(3): const set = new Set([...iterable]) 2`] = `

Message:
> 1 | const set = new Set([...iterable])
    |                     ^^^^^^^^^^^^^ \`new Set(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const set = new Set(iterable)

`;

exports[`no-useless-spread > invalid(3): foo(...[a]) 1`] = `

  1 | foo(...[a])

`;

exports[`no-useless-spread > invalid(3): foo(...[a]) 2`] = `

Message:
> 1 | foo(...[a])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a)

`;

exports[`no-useless-spread > invalid(3): new WeakSet(...iterable) 1`] = `

  1 | new WeakSet(...iterable)

`;

exports[`no-useless-spread > invalid(3): new WeakSet(...iterable) 2`] = `

Message:
> 1 | new WeakSet(...iterable)
    |             ^^^^^^^^^^^ \`new WeakSet(…)\` accepts a single iterable argument, spreading is misleading.

`;

exports[`no-useless-spread > invalid(30): const array = [...[a, , b,],] 1`] = `

  1 | const array = [...[a, , b,],]

`;

exports[`no-useless-spread > invalid(30): const array = [...[a, , b,],] 2`] = `

Message:
> 1 | const array = [...[a, , b,],]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a, , b,]

`;

exports[`no-useless-spread > invalid(31): foo(...[a, , b,],) 1`] = `

  1 | foo(...[a, , b,],)

`;

exports[`no-useless-spread > invalid(31): foo(...[a, , b,],) 2`] = `

Message:
> 1 | foo(...[a, , b,],)
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a, undefined, b,)

`;

exports[`no-useless-spread > invalid(32): new Foo(...[a, , b,],) 1`] = `

  1 | new Foo(...[a, , b,],)

`;

exports[`no-useless-spread > invalid(32): new Foo(...[a, , b,],) 2`] = `

Message:
> 1 | new Foo(...[a, , b,],)
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a, undefined, b,)

`;

exports[`no-useless-spread > invalid(33): foo(...[,, ,(( a )), ,,(0, b), ,,]) 1`] = `

  1 | foo(...[,, ,(( a )), ,,(0, b), ,,])

`;

exports[`no-useless-spread > invalid(33): foo(...[,, ,(( a )), ,,(0, b), ,,]) 2`] = `

Message:
> 1 | foo(...[,, ,(( a )), ,,(0, b), ,,])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(undefined,undefined, undefined,(( a )), undefined,undefined,(0, b), undefined,undefined)

`;

exports[`no-useless-spread > invalid(34): const array = [a, ...[a, b]] 1`] = `

  1 | const array = [a, ...[a, b]]

`;

exports[`no-useless-spread > invalid(34): const array = [a, ...[a, b]] 2`] = `

Message:
> 1 | const array = [a, ...[a, b]]
    |                   ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a, a, b]

`;

exports[`no-useless-spread > invalid(35): const object = {a, ...{a, b}} 1`] = `

  1 | const object = {a, ...{a, b}}

`;

exports[`no-useless-spread > invalid(35): const object = {a, ...{a, b}} 2`] = `

Message:
> 1 | const object = {a, ...{a, b}}
    |                    ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a, a, b}

`;

exports[`no-useless-spread > invalid(36): foo(a, ...[a, b]) 1`] = `

  1 | foo(a, ...[a, b])

`;

exports[`no-useless-spread > invalid(36): foo(a, ...[a, b]) 2`] = `

Message:
> 1 | foo(a, ...[a, b])
    |        ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a, a, b)

`;

exports[`no-useless-spread > invalid(37): new Foo(a, ...[a, b]) 1`] = `

  1 | new Foo(a, ...[a, b])

`;

exports[`no-useless-spread > invalid(37): new Foo(a, ...[a, b]) 2`] = `

Message:
> 1 | new Foo(a, ...[a, b])
    |            ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a, a, b)

`;

exports[`no-useless-spread > invalid(38): const array = [...[a, b], b,] 1`] = `

  1 | const array = [...[a, b], b,]

`;

exports[`no-useless-spread > invalid(38): const array = [...[a, b], b,] 2`] = `

Message:
> 1 | const array = [...[a, b], b,]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a, b, b,]

`;

exports[`no-useless-spread > invalid(39): const object = {...{a, b}, b,} 1`] = `

  1 | const object = {...{a, b}, b,}

`;

exports[`no-useless-spread > invalid(39): const object = {...{a, b}, b,} 2`] = `

Message:
> 1 | const object = {...{a, b}, b,}
    |                 ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a, b, b,}

`;

exports[`no-useless-spread > invalid(4): Object.assign(...args, target, {...source}) 1`] = `

  1 | Object.assign(...args, target, {...source})

`;

exports[`no-useless-spread > invalid(4): Object.assign(...args, target, {...source}) 2`] = `

Message:
> 1 | Object.assign(...args, target, {...source})
    |                                 ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(...args, target, source)

`;

exports[`no-useless-spread > invalid(4): [...foo.slice(1)] 1`] = `

  1 | [...foo.slice(1)]

`;

exports[`no-useless-spread > invalid(4): [...foo.slice(1)] 2`] = `

Message:
> 1 | [...foo.slice(1)]
    | ^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

`;

exports[`no-useless-spread > invalid(4): const weakSet = new WeakSet([...iterable]) 1`] = `

  1 | const weakSet = new WeakSet([...iterable])

`;

exports[`no-useless-spread > invalid(4): const weakSet = new WeakSet([...iterable]) 2`] = `

Message:
> 1 | const weakSet = new WeakSet([...iterable])
    |                             ^^^^^^^^^^^^^ \`new WeakSet(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const weakSet = new WeakSet(iterable)

`;

exports[`no-useless-spread > invalid(4): new Foo(...[a]) 1`] = `

  1 | new Foo(...[a])

`;

exports[`no-useless-spread > invalid(4): new Foo(...[a]) 2`] = `

Message:
> 1 | new Foo(...[a])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a)

`;

exports[`no-useless-spread > invalid(4): new WeakMap(...iterable) 1`] = `

  1 | new WeakMap(...iterable)

`;

exports[`no-useless-spread > invalid(4): new WeakMap(...iterable) 2`] = `

Message:
> 1 | new WeakMap(...iterable)
    |             ^^^^^^^^^^^ \`new WeakMap(…)\` accepts a single iterable argument, spreading is misleading.

`;

exports[`no-useless-spread > invalid(40): foo(...[a, b], b,) 1`] = `

  1 | foo(...[a, b], b,)

`;

exports[`no-useless-spread > invalid(40): foo(...[a, b], b,) 2`] = `

Message:
> 1 | foo(...[a, b], b,)
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a, b, b,)

`;

exports[`no-useless-spread > invalid(41): new Foo(...[a, b], b,) 1`] = `

  1 | new Foo(...[a, b], b,)

`;

exports[`no-useless-spread > invalid(41): new Foo(...[a, b], b,) 2`] = `

Message:
> 1 | new Foo(...[a, b], b,)
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a, b, b,)

`;

exports[`no-useless-spread > invalid(42): const array = [a, ...[a, b], b,] 1`] = `

  1 | const array = [a, ...[a, b], b,]

`;

exports[`no-useless-spread > invalid(42): const array = [a, ...[a, b], b,] 2`] = `

Message:
> 1 | const array = [a, ...[a, b], b,]
    |                   ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a, a, b, b,]

`;

exports[`no-useless-spread > invalid(43): const object = {a, ...{a, b}, b,} 1`] = `

  1 | const object = {a, ...{a, b}, b,}

`;

exports[`no-useless-spread > invalid(43): const object = {a, ...{a, b}, b,} 2`] = `

Message:
> 1 | const object = {a, ...{a, b}, b,}
    |                    ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a, a, b, b,}

`;

exports[`no-useless-spread > invalid(44): foo(a, ...[a, b], b,) 1`] = `

  1 | foo(a, ...[a, b], b,)

`;

exports[`no-useless-spread > invalid(44): foo(a, ...[a, b], b,) 2`] = `

Message:
> 1 | foo(a, ...[a, b], b,)
    |        ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a, a, b, b,)

`;

exports[`no-useless-spread > invalid(45): new Foo(a, ...[a, b], b,) 1`] = `

  1 | new Foo(a, ...[a, b], b,)

`;

exports[`no-useless-spread > invalid(45): new Foo(a, ...[a, b], b,) 2`] = `

Message:
> 1 | new Foo(a, ...[a, b], b,)
    |            ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a, a, b, b,)

`;

exports[`no-useless-spread > invalid(46): const array = [a, ...[], b] 1`] = `

  1 | const array = [a, ...[], b]

`;

exports[`no-useless-spread > invalid(46): const array = [a, ...[], b] 2`] = `

Message:
> 1 | const array = [a, ...[], b]
    |                   ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a,  b]

`;

exports[`no-useless-spread > invalid(47): const array = [a, ...(( [] )),] 1`] = `

  1 | const array = [a, ...(( [] )),]

`;

exports[`no-useless-spread > invalid(47): const array = [a, ...(( [] )),] 2`] = `

Message:
> 1 | const array = [a, ...(( [] )),]
    |                   ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a,   ]

`;

exports[`no-useless-spread > invalid(48): const array = [a, ...(( [] ))] 1`] = `

  1 | const array = [a, ...(( [] ))]

`;

exports[`no-useless-spread > invalid(48): const array = [a, ...(( [] ))] 2`] = `

Message:
> 1 | const array = [a, ...(( [] ))]
    |                   ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a,   ]

`;

exports[`no-useless-spread > invalid(49): const array = [a, ...[b], c] 1`] = `

  1 | const array = [a, ...[b], c]

`;

exports[`no-useless-spread > invalid(49): const array = [a, ...[b], c] 2`] = `

Message:
> 1 | const array = [a, ...[b], c]
    |                   ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a, b, c]

`;

exports[`no-useless-spread > invalid(5): Object.assign(target, {...first, ...second}, third) 1`] = `

  1 | Object.assign(target, {...first, ...second}, third)

`;

exports[`no-useless-spread > invalid(5): Object.assign(target, {...first, ...second}, third) 2`] = `

Message:
> 1 | Object.assign(target, {...first, ...second}, third)
    |                        ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, first, second, third)

`;

exports[`no-useless-spread > invalid(5): [...foo.splice(1)] 1`] = `

  1 | [...foo.splice(1)]

`;

exports[`no-useless-spread > invalid(5): [...foo.splice(1)] 2`] = `

Message:
> 1 | [...foo.splice(1)]
    | ^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.splice(1)

`;

exports[`no-useless-spread > invalid(5): const array = [...[a,]] 1`] = `

  1 | const array = [...[a,]]

`;

exports[`no-useless-spread > invalid(5): const array = [...[a,]] 2`] = `

Message:
> 1 | const array = [...[a,]]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a]

`;

exports[`no-useless-spread > invalid(5): const promise = Promise.all([...iterable]) 1`] = `

  1 | const promise = Promise.all([...iterable])

`;

exports[`no-useless-spread > invalid(5): const promise = Promise.all([...iterable]) 2`] = `

Message:
> 1 | const promise = Promise.all([...iterable])
    |                             ^^^^^^^^^^^^^ \`Promise.all(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const promise = Promise.all(iterable)

`;

exports[`no-useless-spread > invalid(5): new Set(...getNames()) 1`] = `

  1 | new Set(...getNames())

`;

exports[`no-useless-spread > invalid(5): new Set(...getNames()) 2`] = `

Message:
> 1 | new Set(...getNames())
    |         ^^^^^^^^^^^^^ \`new Set(…)\` accepts a single iterable argument, spreading is misleading.

`;

exports[`no-useless-spread > invalid(50): const object = {a, ...(({})), b,} 1`] = `

  1 | const object = {a, ...(({})), b,}

`;

exports[`no-useless-spread > invalid(50): const object = {a, ...(({})), b,} 2`] = `

Message:
> 1 | const object = {a, ...(({})), b,}
    |                    ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a,  b,}

`;

exports[`no-useless-spread > invalid(51): ({a:1, ...{a: 2}}) 1`] = `

  1 | ({a:1, ...{a: 2}})

`;

exports[`no-useless-spread > invalid(51): ({a:1, ...{a: 2}}) 2`] = `

Message:
> 1 | ({a:1, ...{a: 2}})
    |        ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | ({a:1, a: 2})

`;

exports[`no-useless-spread > invalid(52): ({...{a:1}, ...{a: 2}}) 1`] = `

  1 | ({...{a:1}, ...{a: 2}})

`;

exports[`no-useless-spread > invalid(52): ({...{a:1}, ...{a: 2}}) 2`] = `

Message:
> 1 | ({...{a:1}, ...{a: 2}})
    |   ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | ({a:1, ...{a: 2}})

`;

exports[`no-useless-spread > invalid(52): ({...{a:1}, ...{a: 2}}) 3`] = `

Message:
> 1 | ({...{a:1}, ...{a: 2}})
    |             ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | ({...{a:1}, a: 2})

`;

exports[`no-useless-spread > invalid(53): ({\n\tget a() {},\n\tset a(v) {},\n\t...{\n\t\tget a() {}\n\t}\n}) 1`] = `

  1 | ({
  2 | 	get a() {},
  3 | 	set a(v) {},
  4 | 	...{
  5 | 		get a() {}
  6 | 	}
  7 | })

`;

exports[`no-useless-spread > invalid(53): ({\n\tget a() {},\n\tset a(v) {},\n\t...{\n\t\tget a() {}\n\t}\n}) 2`] = `

Message:
  1 | ({
  2 | 	get a() {},
  3 | 	set a(v) {},
> 4 | 	...{
    | 	^^^ Spread an object literal in object literal is unnecessary.
  5 | 		get a() {}
  6 | 	}
  7 | })

Output:
  1 | ({
  2 | 	get a() {},
  3 | 	set a(v) {},
  4 | 	
  5 | 		get a() {}
  6 | 	
  7 | })

`;

exports[`no-useless-spread > invalid(54): ({[a]:1, ...{[a]: 2}}) 1`] = `

  1 | ({[a]:1, ...{[a]: 2}})

`;

exports[`no-useless-spread > invalid(54): ({[a]:1, ...{[a]: 2}}) 2`] = `

Message:
> 1 | ({[a]:1, ...{[a]: 2}})
    |          ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | ({[a]:1, [a]: 2})

`;

exports[`no-useless-spread > invalid(55): const object = {\n\ta: 1,\n\n\t...{\n\t\ttestKeys() {\n\t\t\tconsole.assert(Object.keys(this).length === 2)\n\t\t}\n\t}\n}\nobject.testKeys(); 1`] = `

   1 | const object = {
   2 | 	a: 1,
   3 |
   4 | 	...{
   5 | 		testKeys() {
   6 | 			console.assert(Object.keys(this).length === 2)
   7 | 		}
   8 | 	}
   9 | }
  10 | object.testKeys();

`;

exports[`no-useless-spread > invalid(55): const object = {\n\ta: 1,\n\n\t...{\n\t\ttestKeys() {\n\t\t\tconsole.assert(Object.keys(this).length === 2)\n\t\t}\n\t}\n}\nobject.testKeys(); 2`] = `

Message:
   1 | const object = {
   2 | 	a: 1,
   3 |
>  4 | 	...{
     | 	^^^ Spread an object literal in object literal is unnecessary.
   5 | 		testKeys() {
   6 | 			console.assert(Object.keys(this).length === 2)
   7 | 		}
   8 | 	}
   9 | }
  10 | object.testKeys();

Output:
   1 | const object = {
   2 | 	a: 1,
   3 |
   4 | 	
   5 | 		testKeys() {
   6 | 			console.assert(Object.keys(this).length === 2)
   7 | 		}
   8 | 	
   9 | }
  10 | object.testKeys();

`;

exports[`no-useless-spread > invalid(56): new Foo(\n\tfoo(\n\t\ta,\n\t\t...[a, b],\n\t\tb,\n\t),\n\t...[\n\t\ta,\n\t\t...[\n\t\t\ta,\n\t\t\tb,\n\t\t],\n\t\tb,\n\t],\n\t{\n\t\ta: [...[a, b]],\n\t\t...{\n\t\t\ta,\n\t\t\tb,\n\t\t},\n\t}\n) 1`] = `

   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

`;

exports[`no-useless-spread > invalid(56): new Foo(\n\tfoo(\n\t\ta,\n\t\t...[a, b],\n\t\tb,\n\t),\n\t...[\n\t\ta,\n\t\t...[\n\t\t\ta,\n\t\t\tb,\n\t\t],\n\t\tb,\n\t],\n\t{\n\t\ta: [...[a, b]],\n\t\t...{\n\t\t\ta,\n\t\t\tb,\n\t\t},\n\t}\n) 2`] = `

Message:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
>  4 | 		...[a, b],
     | 		^^^ Spread an array literal in arguments is unnecessary.
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

Output:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		a, b,
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

`;

exports[`no-useless-spread > invalid(56): new Foo(\n\tfoo(\n\t\ta,\n\t\t...[a, b],\n\t\tb,\n\t),\n\t...[\n\t\ta,\n\t\t...[\n\t\t\ta,\n\t\t\tb,\n\t\t],\n\t\tb,\n\t],\n\t{\n\t\ta: [...[a, b]],\n\t\t...{\n\t\t\ta,\n\t\t\tb,\n\t\t},\n\t}\n) 3`] = `

Message:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
>  7 | 	...[
     | 	^^^ Spread an array literal in arguments is unnecessary.
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

Output:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b
  14 | 	,
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

`;

exports[`no-useless-spread > invalid(56): new Foo(\n\tfoo(\n\t\ta,\n\t\t...[a, b],\n\t\tb,\n\t),\n\t...[\n\t\ta,\n\t\t...[\n\t\t\ta,\n\t\t\tb,\n\t\t],\n\t\tb,\n\t],\n\t{\n\t\ta: [...[a, b]],\n\t\t...{\n\t\t\ta,\n\t\t\tb,\n\t\t},\n\t}\n) 4`] = `

Message:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
>  9 | 		...[
     | 		^^^ Spread an array literal in array literal is unnecessary.
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

Output:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		
  10 | 			a,
  11 | 			b
  12 | 		,
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

`;

exports[`no-useless-spread > invalid(56): new Foo(\n\tfoo(\n\t\ta,\n\t\t...[a, b],\n\t\tb,\n\t),\n\t...[\n\t\ta,\n\t\t...[\n\t\t\ta,\n\t\t\tb,\n\t\t],\n\t\tb,\n\t],\n\t{\n\t\ta: [...[a, b]],\n\t\t...{\n\t\t\ta,\n\t\t\tb,\n\t\t},\n\t}\n) 5`] = `

Message:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
> 16 | 		a: [...[a, b]],
     | 		    ^^^ Spread an array literal in array literal is unnecessary.
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

Output:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [a, b],
  17 | 		...{
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

`;

exports[`no-useless-spread > invalid(56): new Foo(\n\tfoo(\n\t\ta,\n\t\t...[a, b],\n\t\tb,\n\t),\n\t...[\n\t\ta,\n\t\t...[\n\t\t\ta,\n\t\t\tb,\n\t\t],\n\t\tb,\n\t],\n\t{\n\t\ta: [...[a, b]],\n\t\t...{\n\t\t\ta,\n\t\t\tb,\n\t\t},\n\t}\n) 6`] = `

Message:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
> 17 | 		...{
     | 		^^^ Spread an object literal in object literal is unnecessary.
  18 | 			a,
  19 | 			b,
  20 | 		},
  21 | 	}
  22 | )

Output:
   1 | new Foo(
   2 | 	foo(
   3 | 		a,
   4 | 		...[a, b],
   5 | 		b,
   6 | 	),
   7 | 	...[
   8 | 		a,
   9 | 		...[
  10 | 			a,
  11 | 			b,
  12 | 		],
  13 | 		b,
  14 | 	],
  15 | 	{
  16 | 		a: [...[a, b]],
  17 | 		
  18 | 			a,
  19 | 			b
  20 | 		,
  21 | 	}
  22 | )

`;

exports[`no-useless-spread > invalid(57): const baz = [2];\ncall(foo, ...[bar, ...baz]); 1`] = `

  1 | const baz = [2];
  2 | call(foo, ...[bar, ...baz]);

`;

exports[`no-useless-spread > invalid(57): const baz = [2];\ncall(foo, ...[bar, ...baz]); 2`] = `

Message:
  1 | const baz = [2];
> 2 | call(foo, ...[bar, ...baz]);
    |           ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | const baz = [2];
  2 | call(foo, bar, ...baz);

`;

exports[`no-useless-spread > invalid(58): Promise.all(...[...iterable]) 1`] = `

  1 | Promise.all(...[...iterable])

`;

exports[`no-useless-spread > invalid(58): Promise.all(...[...iterable]) 2`] = `

Message:
> 1 | Promise.all(...[...iterable])
    |             ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | Promise.all(...iterable)

`;

exports[`no-useless-spread > invalid(59): new Map(...[...iterable]) 1`] = `

  1 | new Map(...[...iterable])

`;

exports[`no-useless-spread > invalid(59): new Map(...[...iterable]) 2`] = `

Message:
> 1 | new Map(...[...iterable])
    |         ^^^ Spread an array literal in arguments is unnecessary.

`;

exports[`no-useless-spread > invalid(6): Object.assign(target, {...source,}, third) 1`] = `

  1 | Object.assign(target, {...source,}, third)

`;

exports[`no-useless-spread > invalid(6): Object.assign(target, {...source,}, third) 2`] = `

Message:
> 1 | Object.assign(target, {...source,}, third)
    |                        ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, source, third)

`;

exports[`no-useless-spread > invalid(6): [...foo.toReversed()] 1`] = `

  1 | [...foo.toReversed()]

`;

exports[`no-useless-spread > invalid(6): [...foo.toReversed()] 2`] = `

Message:
> 1 | [...foo.toReversed()]
    | ^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.toReversed()

`;

exports[`no-useless-spread > invalid(6): const object = {...{a,}} 1`] = `

  1 | const object = {...{a,}}

`;

exports[`no-useless-spread > invalid(6): const object = {...{a,}} 2`] = `

Message:
> 1 | const object = {...{a,}}
    |                 ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | const object = {a}

`;

exports[`no-useless-spread > invalid(6): const promise = Promise.allSettled([...iterable]) 1`] = `

  1 | const promise = Promise.allSettled([...iterable])

`;

exports[`no-useless-spread > invalid(6): const promise = Promise.allSettled([...iterable]) 2`] = `

Message:
> 1 | const promise = Promise.allSettled([...iterable])
    |                                    ^^^^^^^^^^^^^ \`Promise.allSettled(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const promise = Promise.allSettled(iterable)

`;

exports[`no-useless-spread > invalid(60): new Set(...[iterable]) 1`] = `

  1 | new Set(...[iterable])

`;

exports[`no-useless-spread > invalid(60): new Set(...[iterable]) 2`] = `

Message:
> 1 | new Set(...[iterable])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Set(iterable)

`;

exports[`no-useless-spread > invalid(61): Object.assign(target, {...{a}}) 1`] = `

  1 | Object.assign(target, {...{a}})

`;

exports[`no-useless-spread > invalid(61): Object.assign(target, {...{a}}) 2`] = `

Message:
> 1 | Object.assign(target, {...{a}})
    |                        ^^^ Spread an object literal in object literal is unnecessary.

Output:
  1 | Object.assign(target, {a})

`;

exports[`no-useless-spread > invalid(7): Object.assign(target, {...(( source ))}) 1`] = `

  1 | Object.assign(target, {...(( source ))})

`;

exports[`no-useless-spread > invalid(7): Object.assign(target, {...(( source ))}) 2`] = `

Message:
> 1 | Object.assign(target, {...(( source ))})
    |                        ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, (( source )))

`;

exports[`no-useless-spread > invalid(7): [...foo.toSorted()] 1`] = `

  1 | [...foo.toSorted()]

`;

exports[`no-useless-spread > invalid(7): [...foo.toSorted()] 2`] = `

Message:
> 1 | [...foo.toSorted()]
    | ^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.toSorted()

`;

exports[`no-useless-spread > invalid(7): const promise = Promise.any([...iterable]) 1`] = `

  1 | const promise = Promise.any([...iterable])

`;

exports[`no-useless-spread > invalid(7): const promise = Promise.any([...iterable]) 2`] = `

Message:
> 1 | const promise = Promise.any([...iterable])
    |                             ^^^^^^^^^^^^^ \`Promise.any(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const promise = Promise.any(iterable)

`;

exports[`no-useless-spread > invalid(7): foo(...[a,]) 1`] = `

  1 | foo(...[a,])

`;

exports[`no-useless-spread > invalid(7): foo(...[a,]) 2`] = `

Message:
> 1 | foo(...[a,])
    |     ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | foo(a)

`;

exports[`no-useless-spread > invalid(8): Object.assign(target, {...(foo, bar)}) 1`] = `

  1 | Object.assign(target, {...(foo, bar)})

`;

exports[`no-useless-spread > invalid(8): Object.assign(target, {...(foo, bar)}) 2`] = `

Message:
> 1 | Object.assign(target, {...(foo, bar)})
    |                        ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

Suggestion 1/1: Remove the object literal wrapper.:
  1 | Object.assign(target, (foo, bar))

`;

exports[`no-useless-spread > invalid(8): [...foo.toSpliced(0, 1)] 1`] = `

  1 | [...foo.toSpliced(0, 1)]

`;

exports[`no-useless-spread > invalid(8): [...foo.toSpliced(0, 1)] 2`] = `

Message:
> 1 | [...foo.toSpliced(0, 1)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.toSpliced(0, 1)

`;

exports[`no-useless-spread > invalid(8): const promise = Promise.race([...iterable]) 1`] = `

  1 | const promise = Promise.race([...iterable])

`;

exports[`no-useless-spread > invalid(8): const promise = Promise.race([...iterable]) 2`] = `

Message:
> 1 | const promise = Promise.race([...iterable])
    |                              ^^^^^^^^^^^^^ \`Promise.race(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const promise = Promise.race(iterable)

`;

exports[`no-useless-spread > invalid(8): new Foo(...[a,]) 1`] = `

  1 | new Foo(...[a,])

`;

exports[`no-useless-spread > invalid(8): new Foo(...[a,]) 2`] = `

Message:
> 1 | new Foo(...[a,])
    |         ^^^ Spread an array literal in arguments is unnecessary.

Output:
  1 | new Foo(a)

`;

exports[`no-useless-spread > invalid(9): Object.assign(target, {/* keep */ ...source}) 1`] = `

  1 | Object.assign(target, {/* keep */ ...source})

`;

exports[`no-useless-spread > invalid(9): Object.assign(target, {/* keep */ ...source}) 2`] = `

Message:
> 1 | Object.assign(target, {/* keep */ ...source})
    |                                   ^^^ \`Object.assign(…)\` source object with only spread properties is unnecessary.

`;

exports[`no-useless-spread > invalid(9): [...foo.with(0, bar)] 1`] = `

  1 | [...foo.with(0, bar)]

`;

exports[`no-useless-spread > invalid(9): [...foo.with(0, bar)] 2`] = `

Message:
> 1 | [...foo.with(0, bar)]
    | ^^^^^^^^^^^^^^^^^^^^^ Unnecessarily cloning an array.

Output:
  1 | foo.with(0, bar)

`;

exports[`no-useless-spread > invalid(9): const array = Array.from([...iterable]) 1`] = `

  1 | const array = Array.from([...iterable])

`;

exports[`no-useless-spread > invalid(9): const array = Array.from([...iterable]) 2`] = `

Message:
> 1 | const array = Array.from([...iterable])
    |                          ^^^^^^^^^^^^^ \`Array.from(…)\` accepts an iterable as an argument, it's unnecessary to convert to an array.

Output:
  1 | const array = Array.from(iterable)

`;

exports[`no-useless-spread > invalid(9): const array = [...[a,],] 1`] = `

  1 | const array = [...[a,],]

`;

exports[`no-useless-spread > invalid(9): const array = [...[a,],] 2`] = `

Message:
> 1 | const array = [...[a,],]
    |                ^^^ Spread an array literal in array literal is unnecessary.

Output:
  1 | const array = [a,]

`;
